SVG Plugin is broken in 1.5.4, now fixed for 1.5.5 Doc Updates for https://github.com/thednp/kute.js/commit/c6e7caabc67b40d1fdf4c6fb5755024c3bce47cf

--- a/demo/assets/css/reset.css
+++ b/demo/assets/css/reset.css
@@ -81,7 +81,8 @@ img {
   border: 0;
 }
 svg:not(:root) {
-  overflow: hidden;
+  /*overflow: hidden;*/
+  overflow: visible;
 }
 figure {
   margin: 1em 40px;
